--- a/src/pages/welcome.css
+++ b/src/pages/welcome.css
@@ -1,7 +1,12 @@
 .app {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
-    justify-content: space-around;
     flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
 }
 
 .icon {
@@ -11,8 +16,9 @@
 }
 
 .spinner-1 {
-    width: 90px;
+    width: 30%;
     align-self: center;
+    margin-bottom: -25px;
 }
 
 .flex-item {
@@ -20,12 +26,13 @@
 }
 
 .spin-win {
-    width: 200px;
+    width: 70%;
     align-self: center;
 }
 
 .playnow-btn {
     align-self: center;
+    width: 100%;
 }
 
 .text {
@@ -64,6 +71,7 @@
 }
 
 .clicker {
-    width: 40%;
     align-self: center;
+    width: 40%;
+    margin-left: 30%;
 }
