--- a/src/components/login.css
+++ b/src/components/login.css
@@ -68,6 +68,7 @@
     align-self: center;
     display: flex;
     flex-direction: column;
+    padding: 10px 0px 10px 0px;
     justify-content: center;
 }
 
