--- a/src/pages/result.css
+++ b/src/pages/result.css
@@ -2,10 +2,11 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     height: 100%;
     width: 100%;
     margin: auto;
+    background-color: aliceblue;
 }
 
 .movieposter {
@@ -13,7 +14,9 @@
     border-radius: 30px;
 }
 
-h1 {
+h2,
+p,
+{
     color: #fff;
     align-self: center;
 }
@@ -23,10 +26,6 @@ h1 {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-}
-
-.add {
-    width: 95%;
 }
 
 .btn {
@@ -47,4 +46,10 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.add {
+    border-radius: 50px 50px 0px 0px;
+    height: 60%;
+    width: 100%;
 }
